@@ -783,6 +783,7 @@ OpenDoc_FILTER_OPTIONS=OpenDocument Filter Options
 OpenDoc_TRANSLATE_ELEMENTS=Translate the following elements:
 OpenDoc_TRANSLATE_INDEXES=&Index entries
 OpenDoc_TRANSLATE_BOOKMARKS=&Bookmarks
+OpenDoc_TRANSLATE_BOOKMARKREFS=Bookmark &references
 OpenDoc_TRANSLATE_NOTES=&Notes
 OpenDoc_TRANSLATE_COMMENTS=&Comments
 OpenDoc_ERROR_IN_FILE=Error in file 
